styles.css
:root{
    --Cream: #FFECD1;
    --DarkBlue: #001524;
    --DarkTeal: #15616d;
    --White: white;
    --Orange: #ff7d00;
}
*{
    box-sizing: border-box;
}
html{
    font-family: 'League Spartan', sans-serif;
}
.topNav {
    background-color:var(--DarkBlue);
    /* box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1); */
    /* position: absolute; */
    width: 100%;
    z-index: 0;
  }
  
  .topNav .menu {
    margin: 0;
    padding: 0;
    list-style: none;
    overflow: hidden;
    background-color: var(--DarkBlue);
  }
  
  .topNav .topListItems .topLinks {
    display: block;
    background-color: var(--DarkBlue);
    padding: 20px;
    margin: 10px;
    border-radius: 10px;
    text-decoration: none;
  }
  
  .topNav .topListItems .topLinks:hover,
  .topNav .menu-btn:hover {
    background-color: var(--DarkTeal);
  }
  
  .topNav .logo {
    display: block;
    float: left;
    font-size: 2em;
    padding: 10px 20px;
    text-decoration: none;
  }
  
  /* menu */
  
  .topNav .menu {
    clear: both;
    max-height: 0;
    transition: max-height .2s ease-out;
  }
  
  /* menu icon */
  
  .topNav .menu-icon {
    cursor: pointer;
    display: inline-block;
    float: right;
    padding: 28px 20px;
    position: relative;
    user-select: none;
  }
  
  .topNav .menu-icon .navicon {
    background: var(--Cream);
    display: block;
    height: 2px;
    position: relative;
    transition: background .2s ease-out;
    width: 18px;
  }
  
  .topNav .menu-icon .navicon:before,
  .topNav .menu-icon .navicon:after {
    background: var(--Cream);
    content: '';
    display: block;
    height: 100%;
    position: absolute;
    transition: all .2s ease-out;
    width: 100%;
  }
  
  .topNav .menu-icon .navicon:before {
    top: 5px;
  }
  
  .topNav .menu-icon .navicon:after {
    top: -5px;
  }
  
  /* menu btn */
  
  .topNav .menu-btn {
    display: none;
  }
  
  .topNav .menu-btn:checked ~ .menu {
    max-height: 280px;
  }
  
  .topNav .menu-btn:checked ~ .menu-icon .navicon {
    background: var(--DarkBlue);
  }
  
  .topNav .menu-btn:checked ~ .menu-icon .navicon:before {
    transform: rotate(-45deg);
  }
  
  .topNav .menu-btn:checked ~ .menu-icon .navicon:after {
    transform: rotate(45deg);
  }
  
  .topNav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
  .topNav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
    top: 0;
  }
  
  /* 48em = 768px */
  
  @media (min-width: 48em) {
    .topNav .topListItems {
      float: left;
    }
    .topNav .topListItems .topLinks {
      padding: 20px 30px;
    }
    .topNav .menu {
      clear: none;
      float: right;
      max-height: none;
    }
    .topNav .menu-icon {
      display: none;
    }
  }
.logo{
    height: auto;
    width: 150px;
}
.topLinks{
    font-size: 20px;
}
.topLinks:link{
    color: var(--Cream);
}
.topLinks:visited{
    color: var(--Cream);
}

body{
    background-color: var(--DarkBlue);
}

#profilePic{
    height: auto;
    width: 250px;
    border: var(--Cream) 5px solid;
    border-radius: 50%;
    margin-left: 30px;
    margin-top: 10px;
}
#AboutMe{
    display: flex;
    margin-left: 30px;
    margin-right: 30px;
    text-align: left;
    border-radius: 20px;
    width: fit-content;
    box-shadow: 0px 0px 50px var(--DarkTeal);

}
#introDiv{
    float: right;
    margin-left: 40px;
}
#about{
    color: var(--Cream);
    margin-bottom: 0px;
    padding: 0px;
    float: left;
   
}
#intro{
    color: var(--Cream);
    float: right;
    margin-right: 30px;
    margin-top: 10px;
    line-height: 40px;
    padding: 0px;
    font-size: 20px;
}
#WorkExperienceDiv{
    color: var(--Cream);
    margin-left: 30px;
    margin-right: 30px;
   
}
.companyName{
   margin-bottom: 0px;
   padding: 0px;
   font-size: 30px;
}
.positionName{
    margin-top: 10px;
    padding: 0px;
    margin-bottom: 0px;
}
.jobDescription{
    margin-top: 0px;
    padding: 0px;
}
.pointsList{
    padding-left: 0;
    list-style: none;
}
.listItem{
    list-style-type: decimal;
    line-height: 30px;
    font-size: 17px;
    text-indent: 0%;
}
#TechStackHeading{
    color: var(--Cream);
    font-size: 40px;
    margin-left: 30px;
    bottom: 0px;
}
#Skills>*{
    display: inline-block;
}
#Skills{
    overflow:auto;
    white-space: nowrap;
}
::-webkit-scrollbar {
    height: 5px;
    width: 0px;
}
::-webkit-scrollbar-thumb{
    background: var(--Cream);
    -webkit-border-radius: 1ex;
    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
}
.subTechHeading{
    color: var(--Cream);
    font-size: 25px;
    margin-left: 30px;
    margin-right: 30px;
}
.TechGroup{
    width: auto;
    text-align: center;
    padding: 20px;
}
.TechDiv{
    color: var(--Cream);
    font-size: 16px;
    grid-template-columns: 150px 100px;
    display: grid;
    
    /* div:nth-of-type(even) {
        grid-column: 2;
    } */
}
.techImages{
    height: 100px;
    width: 100px;
    background-color: var(--White);
    border-radius: 15px;
    padding: 10px;
    box-shadow: 0px 0px 30px var(--DarkTeal);
    object-fit: cover;
}
.certificates{
    display: grid; 
    grid-template-rows: auto auto auto auto;
    gap: 20px;
    grid-auto-flow: column;
    color: var(--Cream);
    line-height: 25px;
    /* overflow: auto;
    white-space: nowrap; */
    margin: 30px;
    padding: 50px;
}
.certificates:nth-child(2n){
    grid-row: 2;
}
.certificates:nth-child(n){
    grid-row: 1;
}
.certificateItem>*{
    display: inline-block;
    align-items: center;
    vertical-align: middle;
    padding: 10px;
    font-size: 20px;
}
#TechnicalProjects>*{
    margin: 40px;
    color: var(--Cream);
}
.ProjectItems{
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   margin: 10px;
   line-height: 30px;
   font-size: 20px;
   border-radius: 30px;
   box-shadow: 0px 0px 50px var(--DarkTeal);
}
.ProjectName{
    font-size: 35px;
}
.githubLinks{
        padding: 10px;
        margin: 10px;
}
.githubLinks:link{
    color: var(--Cream);
}
.githubLinks:visited{
    color: var(--Cream);
}
#SocialHeading{
    color: var(--Cream);
    font-size: 40px;
    bottom: 0px;
}
#SocialDiv>*
{
    width: fit-content;
    display: inline-block;
    text-align: center;
    font-size: 30px;
    margin-left: 40px;
    margin-right: 40px;
}
.SocialLinks{
    color: #FFECD1;
    width: auto;
    margin: 10px;
}
.SocialLinks:link{
    color: var(--Cream);
}
.SocialLinks:visited{
    color: var(--Cream);
}
@media (max-width:320px)  { 
    /* smartphones, iPhone, portrait 480x320 phones */ 
    #AboutMe{
        display: inline-block;
    }
}
@media (max-width:481px)  {
     /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
     #AboutMe{
        display: inline-block;
    }    
}
@media (max-width:641px)  { 
    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
    #AboutMe{
        display: inline-block;
    }
}
@media (max-width:961px)  { 
    /* tablet, landscape iPad, lo-res laptops ands desktops */ 
    #AboutMe{
        display: inline-block;
    }
}
@media (max-width:1025px) {
     /* big landscape tablets, laptops, and desktops */ 
     #AboutMe{
        display: inline-block;
    }    
}
@media (max-width:1281px) { 
    /* hi-res laptops and desktops */ 
    #AboutMe{
        display: inline-block;
    }
}

